# minishell

./: CMakeLists.txt  Makefile
libft/: Makefile  ft_isalpha.c  ft_isdigit.c  ft_lstnew.c  ft_strcmp.c  libft.h
src/: env_var.c  error.c  main.c  minishell.h  tamerlan.c
src/env_var/: env_var.c  env_var_list_handler.c
src/lexer/: lexer.c  lexer.h  token_utlis.c
src/parser/: cmd_processing.c  parser.c  parser.h  token_list_eval.c
src/utils/: error_handler.c  ft_puterror.c  ft_substr_len.c
